# rag_architectures_and_concepts

./: .gitattributes  README.md  Resources.md
docs/: Agentic_RAG_Intro.docx  Agentic_Supervisor_and_Agentic_RAG.docx  Building_Production_RAG_Over_Complex_Documents.docx  Chunking_Strategies_for_RAG_applications.docx  MCP-Based_Distributed_RAG_Architecture.docx  Multiple_Vector_Database_Instances_in_Agentic_RAG_Systems.docx  Note_on_Approximate_Nearest_Neighbor_Algorithms.docx  Notes_on_Knowledge_Graphs_and_Higher_Order_Network_Models.docx  Notes_on_LightMem-Memory_Augmented_Generation_in_Agentic_Designs.docx  Notes_on_Vector_Retrieval_Methods_and_Techniques.docx  On_the_Alternatives_to_GraphRAG.docx  On_the_Performance_of_HuggingFace_Storage_layer_and_the_latest_release_of_it.docx  Retrieval_Augmented_Generation_Internals.docx  Simple_RAG_Architecture_Using_LangGraph.docx  VectorDB_Instances_in_AgenticRAG.docx  Why_When_and_How_to_Fine-Tune_a_Custom_Embedding_Model_Monigatti_2025.docx
docs/evaluation/: DRIFT_search_example.md  RELATIONSHIP_search_example.md  TEMPORAL_search_example.md  distinction_between_COMPLEX_ANALYTICAL_search_and_DRIFT_search.md
docs/evaluation/graphrag_search_examples/: COMPARATIVE_search_example.md  COMPLEX_ANALYTICAL_search_example.md  GLOBAL_search_example.md  distinction_between_COMPLEX_ANALYTICAL_search_and_DRIFT_search.md  graphrag_test_dataset.md  (+2 more)
src/examples/langchain/mongo_cache_memory/: MongoDBCloudHostedAtlasCluster.md  README.md  SelfHostedMongoDB.md  mongodb_langchain_cache_memory.ipynb  pyproject.toml
src/notebooks/: rag.ipynb
(+47 files in other folders)
