[project]
name = "mongo-cache-memory"
version = "0.1.0"
description = ""
authors = [
    {name = "Dimitar Gueorguiev",email = "dimitar_pg13@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "notebook (>=7.4.4,<8.0.0)",
    "pymongo (>=4.13.2,<5.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "mongo_cache_memory", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
